--- a/src/App.css
+++ b/src/App.css
@@ -3,4 +3,12 @@
   margin: 0 auto;
   /* text-align: center; */
   overflow: hidden;
+
+  & > * {
+    box-sizing: border-box;
+  }
+  button:focus,
+  button:focus-visible {
+    outline: none;
+  }
 }
